--- a/asteria/server/dashboard/template/dashboard.css
+++ b/asteria/server/dashboard/template/dashboard.css
@@ -1,13 +1,37 @@
-* {
+html, body {
     margin: 0;
     padding: 0;
-}
-
-html, body {
     width: 100%;
     height: 100%;
+    background-color: #000000;
+    font-family: 'Raleway', sans-serif;
+    overflow: hidden;
 }
 
-canvas {
-    display: block;
+#nav-bar {
+    height: 30px;
+    padding-top: 10px;
+    background-color: #000000;
+    color: #FFFFFF;
+    box-shadow: 0px 9px 42px -10px rgba(0,0,0,0.75);
+}
+
+#nav-bar > div {
+    float: left;
+    padding-left: 1%;
+}
+
+#color-bars-container {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#color-bars-container > div {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 1%;
+    border: 1px solid rgba(0,0,0,0.1);
 }
