--- a/asteria/server/dashboard/template/dashboard.html
+++ b/asteria/server/dashboard/template/dashboard.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Asteria Dashboard</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+
     <style type="text/css">
         {% include 'dashboard.css' %}
     </style>
@@ -25,6 +27,8 @@
     <div id="color-bars-container">
 
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script type="text/javascript">
         {% include 'dashboard.js' %}
     </script>
